[package]
name = "malaga_http_utils"
version = "0.1.3"
description = "Small library to handler request and response objects"
authors = ["Francisco Jesus Navarro Cortes <spielrs@icloud.com>"]
edition = "2018"
repository = "https://github.com/spielrs/malaga-http_utils"
keywords = ["malaga", "http", "utils"]
categories = ["network-programming"]
license = "MIT"
license-file = "LICENSE"
readme = "README.md"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
bincode = "1.0"
